# wtss

./: Cargo.toml  README.md  build.rs
ab-recursion-sp1/: Cargo.toml
ab-recursion-sp1/contracts/src/: ABOracle.sol
ab-recursion-sp1/contracts/src/fixtures/: 0to1-fixture-with_bls_aggregate.json  0to1-fixture.json  1to2-fixture-with_bls_aggregate.json  1to2-fixture.json
ab-recursion-sp1/contracts/test/: ABOracle.t.sol
ab-recursion-sp1/elf/: riscv32im-succinct-zkvm-elf
ab-recursion-sp1/lib/: Cargo.toml
ab-recursion-sp1/lib/src/: address_book.rs  ed25519.rs  lib.rs  signers.rs  statement.rs
ab-recursion-sp1/program/: Cargo.toml
ab-recursion-sp1/program/src/: main.rs
ab-recursion-sp1/script/: Cargo.toml
ab-recursion-sp1/script/src/: lib.rs  raps.rs
docs/: slides.key
hints/: Cargo.toml
hints/src/: errors.rs  hints.rs  kzg.rs  lib.rs  setup.rs  utils.rs
plonky-wraps/: Cargo.toml  README.md
plonky-wraps/src/: lib.rs
plonky-wraps/src/hashchain/: mod.rs
plonky-wraps/src/raps/: aggregation_circuit.rs  attestatation.rs  attestation_circuit.rs  circuit.rs  mod.rs  recursion.rs  roster.rs
plonky-wraps/src/semaphore/: access_set.rs  circuit.rs  recursion.rs  signal.rs
raps/: Cargo.toml  rust-toolchain.toml
raps/common/: Cargo.toml
raps/common/src/: address_book.rs  ed25519.rs  lib.rs  statement.rs
raps/elf/: riscv32im-succinct-zkvm-elf
raps/lib/src/: address_book.rs  lib.rs
raps/raps/: Cargo.toml
raps/raps/src/: byteraps.rs  raps.rs
raps/script/: Cargo.toml
raps/script/src/: lib.rs
raps/zkvm_program/src/: main.rs
src/: ab-rotation-program  main.rs
succint-wraps/: .gitignore  Cargo.toml
succint-wraps/common/src/: address_book.rs  ed25519.rs  errors.rs  lib.rs  sha256.rs  statement.rs
succint-wraps/raps/: Cargo.toml  build.rs
succint-wraps/raps/src/: byteraps.rs  jni_history.rs  jni_util.rs  lib.rs  raps.rs
succint-wraps/raps_compression_zkvm_program/: Cargo.toml
succint-wraps/raps_compression_zkvm_program/src/: main.rs
succint-wraps/zkvm_program/src/: main.rs
