[package]
name = "hints-bls12381"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.10.6", default-features = false }
criterion = { version = "^0.4.0", features = [ "html_reports" ] }
ark-std = { version = "^0.4.0" }
ark-ec = { version = "^0.4.0" }
ark-ff = { version = "^0.4.0" }
ark-poly = { version = "^0.4.0" }
ark-poly-commit = { version = "^0.4.0" }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-serialize = { version = "^0.4.0", default-features = true }
num-bigint = { version = "^0.4.0", default-features = false }
rand = "*"
paste = { version = "1.0" }
crossbeam = { version = "0.8.2" }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }

[features]
asm = [ "ark-ff/asm" ]
parallel = [ "ark-std/parallel", "ark-ff/parallel",  "ark-ec/parallel", ]

[profile.dev]
opt-level = 3
