[package]
name = "hints-bls12381"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "^0.10.0", default-features = false }
ark-std = { version = "^0.4.0" }
ark-ec = { version = "^0.4.0" }
ark-ff = { version = "^0.4.0" }
ark-poly = { version = "^0.4.0" }
ark-poly-commit = { version = "^0.4.0" }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-serialize = { version = "^0.4.0", default-features = true }
num-bigint = { version = "^0.4.0", default-features = false }
rand = { version = "^0.8.0" }

[features]
asm = [ "ark-ff/asm" ]
parallel = [ "ark-std/parallel", "ark-ff/parallel",  "ark-ec/parallel", ]

[profile.dev]
opt-level = 3
