[workspace]
members = [
    "lib",
    "zkvm_program",
    "raps",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.8"
bincode = "1.3.3"
derive_more = { version = "1.0.0", features = ["deref"] }
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] }
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
serde-hex = "0.1.0"
sha2 = "0.10.8"
smallvec = { version = "1.13", features = ["const_generics", "serde"] }
sp1-helper = "3.2"
# sp1-verifier = "3.2"
sp1-sdk = "3.2"
sp1-zkvm = "3.2"

# Re-imported our own
ab-rotation-lib = { path = "./lib" }

# NOTE: <https://docs.succinct.xyz/writing-programs/patched-crates.html>
[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-patch-v1" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "curve25519_dalek-v4.1.3-patch-v1" }
