[package]
version = "0.1.0"
name = "ab-rotation-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { workspace = true, features = ["verify"] }
ab-rotation-lib = { workspace = true }

[features]
default = []
with_bls_aggregate = ["ab-rotation-lib/with_bls_aggregate"]
