[package]
name = "ab-rotation-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
bincode = { workspace = true }
derive_more = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true }
sp1-zkvm = { workspace = true, features = ["verify"] }

[features]
default = []
